markdown cell change

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "Checkpoint: The .pth file that contains our optimized weights so that we can calculate an inference when our image goes through the model\n",
     "\n",
-    "wsi_dir: The directory that contains our images we want to use for inference"
+    "wsi_dir: The directory that contains our WSI images we want to use for inference"
    ]
   },
   {
