Creates masks over entire directory

--- a/create_masks.ipynb
+++ b/create_masks.ipynb
@@ -73,24 +73,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello.png\n"
-     ]
-    }
-   ],
-   "source": [
-    "mask_name=input(\"Please Provide the name of the mask file with .png: \")\n",
-    "print(mask_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -115,7 +97,7 @@
     "         masked_image,mask = retrieve_ann_coord(slide,root,mask)\n",
     "    # Display the masked image\n",
     "    # plt.imshow(masked_image)\n",
-    "    plt.imsave(mask_name,masked_image)"
+    "    plt.imsave(f'{wsi[:-4]}.png',masked_image)"
    ]
   }
  ],
